--- a/WindowsTheme.theme.css
+++ b/WindowsTheme.theme.css
@@ -34,175 +34,176 @@
 
  /* User Settings */
  /* Zoom Level 50% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 240px; top: 1328px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 240px; top: 1316px;"] {
  background: #3371A8 !important;
 }
  /* Zoom Level 67% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 240.797px; top: 965.642px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 240.797px; top: 956.687px;"] {
  background: #3371A8 !important;
 }
  /* Zoom Level 75% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 241.167px; top: 850px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 241.167px; top: 842px;"] {
  background: #3371A8 !important;
 }
  /* Zoom Level 80% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 240.918px; top: 790.992px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 240.918px; top: 783.492px;"] {
  background: #3371A8 !important;
 }
  /* Zoom Level 90% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 241.186px; top: 690.997px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 241.186px; top: 684.33px;"] {
  background: #3371A8 !important;
 }
  /* Zoom Level 100% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 241.5px; top: 610px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 241.5px; top: 604px;"] {
  background: #3371A8 !important;
 }
 
 /* Button Tooltips */
 /* Mute Tooltip */
 /* Zoom Level 50% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 130px; top: 1308px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 130px; top: 1296px;"] {
        left: 192px !important;
        top: 1330.866px !important;
        background-color: #D93F0B;
 }
 /* Zoom Level 67% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 130.911px; top: 945.679px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 130.911px; top: 936.724px;"] {
        left: 192px !important;
        top: 968.545px !important;
        background-color: #D93F0B;
 }
 /* Zoom Level 75% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 130.5px; top: 830px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 130.5px; top: 822px;"] {
        left: 192px !important;
        top: 852.866px !important;
        background-color: #D93F0B;
 }
 /* Zoom Level 80% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 130.98px; top: 771.012px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 130.98px; top: 763.512px;"] {
        left: 192px !important;
        top: 793.878px !important;
        background-color: #D93F0B;
 }
 /* Zoom Level 90% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 130.991px; top: 671.014px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 130.991px; top: 664.347px;"] {
        left: 192px !important;
        top: 693.88px !important;
        background-color: #D93F0B;
 }
 /* Zoom Level 100% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 131.5px; top: 590px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 131.5px; top: 584px;"] {
        left: 192px !important;
        top: 612.866px !important;
        background-color: #D93F0B;
 }
 /* Deafen Tooltip */
 /* Zoom Level 50% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 161px; top: 1308px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 161px; top: 1296px;"] {
      left: 222px !important;
      top: 1330.866px !important;
      background-color: #D93F0B;
 }
 /* Zoom Level 67% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 160.872px; top: 945.679px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 160.872px; top: 936.724px;"] {
      left: 222px !important;
      top: 968.545px !important;
      background-color: #D93F0B;
 }
 /* Zoom Level 75% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 161.5px; top: 830px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 161.5px; top: 822px;"] {
      left: 222px !important;
      top: 852.866px !important;
      background-color: #D93F0B;
 }
 /* Zoom Level 80% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 161.457px; top: 771.012px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 161.457px; top: 763.512px;"] {
      left: 222px !important;
      top: 793.878px !important;
      background-color: #D93F0B;
 }
 /* Zoom Level 90% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 161.5px; top: 590px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 161.481px; top: 664.347px;"] {
      left: 222px !important;
      top: 693.88px !important;
      background-color: #D93F0B;
 }
 /* Zoom Level 100% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 161.5px; top: 590px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 161.5px; top: 584px;"] {
      left: 222px !important;
      top: 612.866px !important;
      background-color: #D93F0B;
 }
 /* UnMute Tooltip */
 /* Zoom Level 50% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 122px; top: 1308px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 122px; top: 1296px;"] {
        left: 181px !important;
        top: 1330.866px !important;
        background-color: #D93F0B;
 }
 /* Zoom Level 67% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 122.411px; top: 945.679px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 122.411px; top: 936.724px;"] {
        left: 181px !important;
        top: 968.545px !important;
        background-color: #D93F0B;
 }
 /* Zoom Level 75% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 122.5px; top: 830px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 122.5px; top: 822px;"] {
        left: 181px !important;
        top: 852.866px !important;
        background-color: #D93F0B;
 }
 /* Zoom Level 80% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 122.48px; top: 771.012px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 122.48px; top: 763.512px;"] {
        left: 181px !important;
        top: 793.878px !important;
        background-color: #D93F0B;
 }
 /* Zoom Level 90% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 122.991px; top: 671.014px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 122.991px; top: 664.347px;"] {
        left: 181px !important;
        top: 693.88px !important;
        background-color: #D93F0B;
 }
 /* Zoom Level 100% */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 123px; top: 590px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 123px; top: 584px;"] {
        left: 181px !important;
        top: 613.866px !important;
        background-color: #D93F0B;
 }
+
 /* UnDeafen Tooltip */
 /* Zoom Level 50% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 153px; top: 1308px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 153px; top: 1296px;"] {
      left: 215px !important;
      top: 1330.866px !important;
      background-color: #D93F0B;
 }
 /* Zoom Level 67% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 153.372px; top: 945.679px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 153.372px; top: 936.724px;"] {
      left: 215px !important;
      top: 968.545px !important;
      background-color: #D93F0B;
 }
 /* Zoom Level 75% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 153.5px; top: 830px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 153.5px; top: 822px;"] {
      left: 215px !important;
      top: 852.866px !important;
      background-color: #D93F0B;
 }
 /* Zoom Level 80% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 153.457px; top: 771.012px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 153.457px; top: 763.512px;"] {
      left: 215px !important;
      top: 793.878px !important;
      background-color: #D93F0B;
 }
 /* Zoom Level 90% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 153.981px; top: 671.014px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 153.981px; top: 664.347px;"] {
      left: 215px !important;
      top: 693.88px !important;
      background-color: #D93F0B;
 }
 /* Zoom Level 100% */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 154px; top: 590px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 154px; top: 584px;"] {
      left: 215px !important;
      top: 612.866px !important;
      background-color: #D93F0B;
@@ -465,6 +466,19 @@
   height: 34px;
   background-size: cover;
   border-radius: 1px;
+}
+.theme-dark #friends .tab-bar .tab-bar-item.selected .badge {
+    background-color: orange;
+    color: #fff;
+}
+.theme-dark .themed-popout .header,
+.theme-dark .themed-popout,
+.theme-dark .themed-popout .footer,
+.search-bar-tag,
+.theme-dark .messagesPopoutWrap-1VBR-j {
+    background-color: black;
+    border: none;
+    box-shadow: none;
 }
 /* Processing Stuff For a Sec */
 
@@ -1092,6 +1106,7 @@ span:not(.spinner-item) {
   height: 92px;
   margin-bottom: 1px;
   padding: 5px 10px;
+  backface-visibility: unset;
 }
 
 .button-1aU9q1 {
@@ -1484,7 +1499,7 @@ span:not(.spinner-item) {
     color: #FF8C00;
 }
 /* Notifaction Small Menu*/
-.theme-dark .popout .messages-popout-wrap .header,
+.theme-dark .messagesPopoutWrap-1VBR-j .header-y_zptc,
 .theme-dark .popout .messages-popout-wrap,
 .theme-dark .search-results-wrap {
     background-color: black !important;
@@ -1508,7 +1523,8 @@ span:not(.spinner-item) {
 .theme-dark .search-results-wrap .search-result:after {
     background: transparent;
 }
-.theme-dark .popout .messages-popout-wrap .messages-popout .message-group .action-buttons .jump-button,
+.theme-dark .messagesPopoutWrap-1VBR-j .messagesPopout-MzE43I .message-group .actionButtons-LKmOj2 .jumpButton-1CVJpO
+,
 .theme-dark .search-results-wrap .action-buttons .jump-button {
     background-color: black !important;
     color: white;
@@ -1519,14 +1535,15 @@ span:not(.spinner-item) {
 .theme-dark .themed-popout .header .subtitle, .theme-dark .themed-popout .text {
     color: white;
 }
-.theme-dark .popout .messages-popout-wrap .messages-popout .message-group:hover .action-buttons {
+.theme-dark .messagesPopoutWrap-1VBR-j .messagesPopout-MzE43I .message-group:hover .actionButtons-LKmOj2
+ {
     background: none !important;
     box-shadow: none !important;
 }
 .private-channels .channel:hover a {
     background-color: rgba(0,0,0,0.4);
 }
-.theme-dark .popout .messages-popout-wrap .messages-popout .message-group {
+.theme-dark .messagesPopoutWrap-1VBR-j .messagesPopout-MzE43I .message-group {
     background-color: black !important;
     border-color: white;
 }
@@ -1601,7 +1618,7 @@ span:not(.spinner-item) {
 .theme-light .scrollerThemed-19vinI.themeDark-BdSAwu.scrollerTrack-3hhmU0>.scroller-fzNley::-webkit-scrollbar-track {
     background-color: transparent;
 }
-.theme-dark .popout .messages-popout-wrap .footer {
+.theme-dark .messagesPopoutWrap-1VBR-j .footer-dHccYB{
     background-color: black;
 }
 .theme-dark .ui-select .Select-option {
@@ -4703,20 +4720,21 @@ a {
 .theme-dark .keybindShortcutTipsSelect-2VHe9M:last-of-type:before {
     background-color: transparent;
 }
-.dark-2Ll8iS span .bindArrow-3Mm64N g {
+.theme-dark .keybindShortcut-tTramc span .bindArrow-3Mm64N g {
     fill: white !important;
 }
 .theme-dark .tipsWithoutResults-202oQR, .theme-dark .tipsWithResults-3TVZGE {
     border-color: black;
     color: white;
 }
-.dark-2Ll8iS span {
+.theme-dark .keybindShortcut-tTramc span {
     background-color: black;
     border-color: white;
     box-shadow: none;
     color:  white;
 }
-.dark-2Ll8iS span:active {
+.theme-dark .keybindShortcut-tTramc span:active {
+
     box-shadow: none;
     color: white;
     border: 1px dashed;
