--- a/TouhouKnowledge.theme.css
+++ b/TouhouKnowledge.theme.css
@@ -153,11 +153,56 @@
     background-color: transparent;
 }
 .theme-dark .members-1998pB {
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0,0,0,0.33);
 }
 .theme-dark .membersGroup-v9BXpm {
-    text-align: center;
     color: #EFD9C3;
+}
+
+.members-1998pB {
+    transform:translate(150px);
+    z-index:2;
+    transition:all 300ms ease;
+}
+.members-1998pB:hover{
+    animation: member 300ms ease;
+    transform:translate(0px);
+}
+.activityText-sLG0UL,
+.memberInner-2CPc3V {
+    opacity:0;
+    transition:opacity 300ms ease, margin 100ms ease;
+    
+}
+.memberInner-2CPc3V {
+    margin-bottom:10px;
+}
+.members-1998pB:hover .memberInner-2CPc3V, .members-1998pB:hover .memberInner-2CPc3V {
+    opacity:1;
+}
+.membersGroup-v9BXpm {
+    transform-origin:left;
+    transform:scale(0.7);
+    padding:0px 0px 0px 10px;
+    transition: all 300ms ease;
+}
+.membersGroup-v9BXpm:hover {
+    transform:scale(1);
+    padding:0px 0px 0px 30px;
+}
+.members-1998pB .avatar-small {
+    transform:scale(1.2);
+}
+.members-1998pB:hover .avatar-small{
+    transform:scale(1);
+}
+.chat.flex-vertical.flex-spacer>.content.flex-spacer.flex-horizontal>.flex-spacer.flex-vertical{
+    margin-right:-145px;
+    z-index:1
+}
+.chat.flex-vertical.flex-spacer.private>.content.flex-spacer.flex-horizontal>.flex-spacer.flex-vertical{
+    margin-right:0px;
+    z-index:1
 }
 .theme-dark .reaction.reaction-me {
     background: rgba(112, 84, 53,.3);
@@ -180,11 +225,7 @@ a,
     font-weight: normal;
     color: #EFD9C3;
 }
-.members-1998pB  {
-    transform: translate(186px);
-     z-index:2;
-    transition:all 300ms ease;
-}
+
 .theme-dark .iconBadge-2dji3k {
     border: 1px solid black;
     background-color: #705435;
@@ -259,9 +300,7 @@ a,
     mask: none;
     border-radius: 50%;
 }
-.members-1998pB:hover {
-   transform:translate(0px);
-}
+
 ::-webkit-input-placeholder,
 .iconCollapsed-3hFp_8, 
 .iconDefault-3Gr8d2, 
