--- a/Bowser.theme.css
+++ b/Bowser.theme.css
@@ -2104,7 +2104,7 @@ a, .theme-dark .emptyStateNote-ZYTetQ {
     background-color: #53B047;
 }
 /* New Emote Stuff */
-.emojiPicker-3m1S-j {
+.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: #060505;
 }
 .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
