--- a/BrownMaterial.theme.css
+++ b/BrownMaterial.theme.css
@@ -1079,9 +1079,7 @@ a,
     color: silver;
 }
 /* Emote Menu */
-.emojiPicker-3m1S-j,
-.bda-dark #bda-qem-favourite-container, 
-.bda-dark #bda-qem-twitch-container {
+.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: #191a1c;
     border-radius: 0px;
     border: none;
