--- a/ChocolaTheme.theme.css
+++ b/ChocolaTheme.theme.css
@@ -2105,7 +2105,7 @@ form,
     background-color: #795f72;
 }
 /* New Emote Stuff */
-.emojiPicker-3m1S-j {
+.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
         background-color: rgb(71, 56, 58);
     border: 2px solid rgba(255,255,255,0.5);
 }
