--- a/Luigi.theme.css
+++ b/Luigi.theme.css
@@ -2116,7 +2116,7 @@ a, .theme-dark .emptyStateNote-ZYTetQ {
     background-color: #1A9B1A;
 }
 /* New Emote Stuff */
-.emojiPicker-3m1S-j {
+.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: #017400;
 }
 .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
