--- a/Mario.theme.css
+++ b/Mario.theme.css
@@ -2136,7 +2136,7 @@ a, .theme-dark .emptyStateNote-ZYTetQ {
 }
 
 /* New Emote Stuff */
-.emojiPicker-3m1S-j {
+.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: #2E3192;
 }
 .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
