--- a/NewJerseyDevils.theme.css
+++ b/NewJerseyDevils.theme.css
@@ -2129,7 +2129,7 @@ a, .theme-dark .primary-jw0I4K, .user-settings-connections .connection-header .c
     background-color: #C8102E;
 }
 /* New Emote Stuff */
-.emojiPicker-3m1S-j {
+.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j{
     background-color: black;
 }
 .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
