--- a/NoGameNoLife.theme.css
+++ b/NoGameNoLife.theme.css
@@ -1141,9 +1141,7 @@ a,
     color: white;
 }
 /* Emote Menu */
-.emojiPicker-3m1S-j,
-.bda-dark #bda-qem-favourite-container, 
-.bda-dark #bda-qem-twitch-container {
+.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: black;
     border-radius: 0px;
     border: none;
