--- a/OldHistory.theme.css
+++ b/OldHistory.theme.css
@@ -964,9 +964,7 @@ a {
 .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
     background-color: transparent;
 }
-.emojiPicker-3m1S-j,
-.bda-dark #bda-qem-favourite-container, 
-.bda-dark #bda-qem-twitch-container {
+.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-image: linear-gradient(to bottom,rgba(0,0,0,0.3) 0%,rgba(0,0,0,0.2) 100%),url(http://www.modafinilsale.com/data/out/826/233366387-wallpaper-old-paper.jpg);
     border: none;
     background-size: cover;
