--- a/Peach.theme.css
+++ b/Peach.theme.css
@@ -2122,7 +2122,7 @@ a, .theme-dark .emptyStateNote-ZYTetQ {
 }
 
 /* New Emote Stuff */
-.emojiPicker-3m1S-j {
+.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: #F14E90;
 }
 .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
