--- a/RamTheme.theme.css
+++ b/RamTheme.theme.css
@@ -1,4 +1,3 @@
-
 //META{"name":"Ram_Theme","description":"Team Ram Theme","author":"DevilsTheAvenged","version":"2.3"}*//{}
 .app,.callout-backdrop,#pubs-container:before {
 	background-image: url("https://img00.deviantart.net/6892/i/2016/269/a/9/minimalist_wallpaper___ram__re_zero__by_mrtapoz_kun-daisdq0.jpg");
@@ -2060,7 +2059,7 @@ div[class*="switchEnabled"][class*=valueChecked] {
     background-color: #F5ABC4;
 }
 /* New Emote Stuff */
-.emojiPicker-3m1S-j {
+.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: #AF547A;
 }
 .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
