--- a/RemTheme.theme.css
+++ b/RemTheme.theme.css
@@ -1,7 +1,7 @@
 //META{"name":"Rem_Theme","description":"Team Rem Theme","author":"DevilsTheAvenged","version":"2.3"}*//{}
 /* Backgrounds */
 .app,#pubs-container:before {
-	background-image: url("https://pre00.deviantart.net/1bd2/th/pre/i/2016/270/e/0/minimalist_wallpaper___rem__re_zero__by_mrtapoz_kun-daj54o1.jpg");
+	background-image: url("https://i.imgur.com/DDTIAIl.jpg");
 	background-size: cover !important;
 	background-position: center !important;
 }
@@ -2064,7 +2064,7 @@ color: white;
     background-color: #A0C3F5;
 }
 /* New Emote Stuff */
-.emojiPicker-3m1S-j {
+.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: #254F79;
 }
 .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
