--- a/TheGreenChristmas.theme.css
+++ b/TheGreenChristmas.theme.css
@@ -2055,7 +2055,7 @@ a {
 }
 
 /* New Emote Stuff */
-.emojiPicker-3m1S-j {
+.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: black;
 }
 .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
