--- a/TheQuestionMark.theme.css
+++ b/TheQuestionMark.theme.css
@@ -2120,7 +2120,7 @@ a {
 }
 
 /* New Emote Stuff */
-.emojiPicker-3m1S-j {
+.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: black;
 }
 .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
