--- a/WindowsTheme.theme.css
+++ b/WindowsTheme.theme.css
@@ -4176,7 +4176,7 @@ background-size: cover;
     display: none;
 }
 /* New Emote Stuff */
-.emojiPicker-3m1S-j {
+.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: black;
 }
 .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
