--- a/Winter.theme.css
+++ b/Winter.theme.css
@@ -1359,7 +1359,7 @@ form, .member:hover {
 }
 
 /* New Emote Stuff */
-.emojiPicker-3m1S-j {
+.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: #000097;
 }
 .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
