--- a/Yoshi.theme.css
+++ b/Yoshi.theme.css
@@ -2182,7 +2182,7 @@ a, .theme-dark .emptyStateNote-ZYTetQ {
     background-color: #ED1910;
 }
 /* New Emote Stuff */
-.emojiPicker-3m1S-j {
+.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: #53A13C;
 }
 .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
