--- a/Yumeko.theme.css
+++ b/Yumeko.theme.css
@@ -1930,7 +1930,7 @@ background: red;
 }
 
 /* New Emote Stuff */
-.emojiPicker-3m1S-j {
+.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: black;
 }
 .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
