--- a/Bowser.theme.css
+++ b/Bowser.theme.css
@@ -2104,7 +2104,7 @@ a, .theme-dark .emptyStateNote-ZYTetQ {
     background-color: #53B047;
 }
 /* New Emote Stuff */
-.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
+.bda-dark #bda-qem-favourite-container, .bda-dark #bda-qem-twitch-container, .bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: #060505;
 }
 .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
@@ -2135,7 +2135,7 @@ a, .theme-dark .emptyStateNote-ZYTetQ {
     background-color: transparent !important;
     border-color: transparent !important;
 }
-.emojiPicker-3m1S-j .category-2U57w6 {
+.bda-dark .emoji-picker .category, .bda-dark .emojiPicker-3m1S-j .category-2U57w6 {
     background-color: black;
     color: white;
     border: 2px solid #53B047;
