--- a/BrownMaterial.theme.css
+++ b/BrownMaterial.theme.css
@@ -1079,7 +1079,7 @@ a,
     color: silver;
 }
 /* Emote Menu */
-.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
+.bda-dark #bda-qem-favourite-container, .bda-dark #bda-qem-twitch-container, .bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: #191a1c;
     border-radius: 0px;
     border: none;
@@ -1091,7 +1091,7 @@ a,
 .emojiPicker-3m1S-j .header-1nkwgG {
     border-bottom: none;
 }
-.emojiPicker-3m1S-j .category-2U57w6 {
+.bda-dark .emoji-picker .category, .bda-dark .emojiPicker-3m1S-j .category-2U57w6 {
     background-color: #212121;
 }
 .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
