--- a/ChocolaTheme.theme.css
+++ b/ChocolaTheme.theme.css
@@ -2105,7 +2105,7 @@ form,
     background-color: #795f72;
 }
 /* New Emote Stuff */
-.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
+.bda-dark #bda-qem-favourite-container, .bda-dark #bda-qem-twitch-container, .bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
         background-color: rgb(71, 56, 58);
     border: 2px solid rgba(255,255,255,0.5);
 }
@@ -2137,7 +2137,7 @@ form,
     background-color: transparent !important;
     border-color: transparent !important;
 }
-.emojiPicker-3m1S-j .category-2U57w6 {
+.bda-dark .emoji-picker .category, .bda-dark .emojiPicker-3m1S-j .category-2U57w6 {
     background-color: #40323c;
     color: white;
     border: 2px solid rgba(255,255,255,0.4);
