--- a/NoGameNoLife.theme.css
+++ b/NoGameNoLife.theme.css
@@ -1141,7 +1141,7 @@ a,
     color: white;
 }
 /* Emote Menu */
-.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
+.bda-dark #bda-qem-favourite-container, .bda-dark #bda-qem-twitch-container, .bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: black;
     border-radius: 0px;
     border: none;
@@ -1153,7 +1153,7 @@ a,
 .emojiPicker-3m1S-j .header-1nkwgG {
     border-bottom: none;
 }
-.emojiPicker-3m1S-j .category-2U57w6 {
+.bda-dark .emoji-picker .category, .bda-dark .emojiPicker-3m1S-j .category-2U57w6 {
     background-color: #4F1C4F;
     color: white;
 }
