--- a/Peach.theme.css
+++ b/Peach.theme.css
@@ -2122,7 +2122,7 @@ a, .theme-dark .emptyStateNote-ZYTetQ {
 }
 
 /* New Emote Stuff */
-.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
+.bda-dark #bda-qem-favourite-container, .bda-dark #bda-qem-twitch-container, .bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: #F14E90;
 }
 .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
@@ -2154,7 +2154,7 @@ a, .theme-dark .emptyStateNote-ZYTetQ {
     background-color: transparent !important;
     border-color: transparent !important;
 }
-.emojiPicker-3m1S-j .category-2U57w6 {
+.bda-dark .emoji-picker .category, .bda-dark .emojiPicker-3m1S-j .category-2U57w6 {
     background-color: #F14E90;
     color: white;
     border: 2px solid #F484B1;
