--- a/RamTheme.theme.css
+++ b/RamTheme.theme.css
@@ -2059,7 +2059,7 @@ div[class*="switchEnabled"][class*=valueChecked] {
     background-color: #F5ABC4;
 }
 /* New Emote Stuff */
-.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
+.bda-dark #bda-qem-favourite-container, .bda-dark #bda-qem-twitch-container, .bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: #AF547A;
 }
 .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
@@ -2090,7 +2090,7 @@ div[class*="switchEnabled"][class*=valueChecked] {
     background-color: transparent !important;
     border-color: transparent !important;
 }
-.emojiPicker-3m1S-j .category-2U57w6 {
+.bda-dark .emoji-picker .category, .bda-dark .emojiPicker-3m1S-j .category-2U57w6 {
     background-color: #AF547A;
     color: white;
     border: 2px solid #F5ABC4;
