--- a/RemTheme.theme.css
+++ b/RemTheme.theme.css
@@ -2064,7 +2064,7 @@ color: white;
     background-color: #A0C3F5;
 }
 /* New Emote Stuff */
-.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
+.bda-dark #bda-qem-favourite-container, .bda-dark #bda-qem-twitch-container, .bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: #254F79;
 }
 .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
@@ -2095,7 +2095,7 @@ color: white;
     background-color: transparent !important;
     border-color: transparent !important;
 }
-.emojiPicker-3m1S-j .category-2U57w6 {
+.bda-dark .emoji-picker .category, .bda-dark .emojiPicker-3m1S-j .category-2U57w6 {
     background-color: black;
     color: white;
     border: 2px solid #ADC3D3;
