--- a/TheGreenChristmas.theme.css
+++ b/TheGreenChristmas.theme.css
@@ -2055,7 +2055,7 @@ a {
 }
 
 /* New Emote Stuff */
-.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
+.bda-dark #bda-qem-favourite-container, .bda-dark #bda-qem-twitch-container, .bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: black;
 }
 .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
@@ -2086,7 +2086,7 @@ a {
     background-color: transparent !important;
     border-color: transparent !important;
 }
-.emojiPicker-3m1S-j .category-2U57w6 {
+.bda-dark .emoji-picker .category, .bda-dark .emojiPicker-3m1S-j .category-2U57w6 {
     background-color: black;
     color: white;
     border: 2px solid #10B51D;
