--- a/TouhouKnowledge.theme.css
+++ b/TouhouKnowledge.theme.css
@@ -1399,7 +1399,7 @@ a,
     padding-right: 25px;
 }
 /* Emote Menu */
-.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
+.bda-dark #bda-qem-favourite-container, .bda-dark #bda-qem-twitch-container, .bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: black;
     border-radius: 0px;
     border: none;
@@ -1411,7 +1411,7 @@ a,
 .emojiPicker-3m1S-j .header-1nkwgG {
     border-bottom: none;
 }
-.emojiPicker-3m1S-j .category-2U57w6 {
+.bda-dark .emoji-picker .category, .bda-dark .emojiPicker-3m1S-j .category-2U57w6 {
     background-color: #705435;
     color: white;
 }
