--- a/EpicBubbleTheme.theme.css
+++ b/EpicBubbleTheme.theme.css
@@ -196,14 +196,16 @@
     border: 2px solid rgba(255,255,255,0.5);
 }
 
-#friends .btn {
+#friends .btn,
+.private-channel-recipients-invite .error-state.not-friends .btn {
    background-color: rgba(255, 0 , 0 ,0.3);
     color: white;
     border: 2px solid rgba(255, 0 , 0 ,0.5);
     border-radius: 50px;
     transition: background-color .4s linear, border .4s linear;
 }
-#friends .btn:hover {
+#friends .btn:hover,
+.private-channel-recipients-invite .error-state.not-friends .btn:hover {
     background-color: rgba(0, 255 , 0 ,0.3);
     color: white;
     border: 2px solid rgba(0, 255 , 0 ,0.5);
@@ -1337,7 +1339,7 @@ a, .theme-dark .message-group a,.chat .welcome-message h1,.theme-dark .chat .wel
 .theme-dark .message-group:not(.has-divider) {
     border-bottom: none;
 }
-.button-1aU9q1, .button-1aU9q1:hover {
+.button-2b6hmh, .button-2b6hmh:hover {
     border-radius: 50px;
 }
 /* Emote Settings  */
@@ -1764,7 +1766,6 @@ a, .theme-dark .message-group a,.chat .welcome-message h1,.theme-dark .chat .wel
 .profile-3z9uol {
     animation: float 3s ease-in-out infinite;
 }
-.member-roles .member-role>.name{color:#FFF;}
 .theme-dark .rolesList-2YHFg5 .member-role {
     border-radius: 3px;
     color: rgba(231,254,255,0.4);
@@ -1847,9 +1848,7 @@ a, .theme-dark .message-group a,.chat .welcome-message h1,.theme-dark .chat .wel
 .headerTagStreaming-2FikoO {
     color: white;
 }
-.avatar-1jmnc- {
-    border: none;
-}
+
 .header-3mZJcV .avatarStatusStreaming-3lGjGk {
     background-color: #660066;
 }
@@ -1898,7 +1897,7 @@ a, .theme-dark .message-group a,.chat .welcome-message h1,.theme-dark .chat .wel
 /* Part 2 of that Section */
 
 
-.avatar-profile .status {
+.avatar-3EQepX .status {
     border: none;
     height: 40px;
     width: 40px;
@@ -1953,10 +1952,23 @@ a, .theme-dark .message-group a,.chat .welcome-message h1,.theme-dark .chat .wel
     background-color: rgba(231,254,255,0.4);
     border: none;
 }
-#user-profile-modal .guilds .guild .status {
-    border: none !important;
-    bottom: -2px;
-    right: -4px;
+.theme-dark .callAvatar-v-u4BM.voice-2D-tt_ .callAvatarStatus-3y6S04 {
+    border-color: black;
+    background-color: rgba(185,204,203,1);
+}
+.callAvatarBorder-1D_KaE.voice-2D-tt_.speaking-oCqYMI,
+.callAvatarBorder-1D_KaE.video-3GgX2M.speaking-oCqYMI {
+    border-radius: 50%;
+    box-shadow: inset 0 0 0 3px rgba(185,204,203,1);
+}
+.lookFilled-1Gx00P.colorRed-1TFJan {
+    background-color: rgba(255,0,0,0.23);
+    color: #fff;
+    border: 1px solid red;
+}
+.lookFilled-1Gx00P.colorRed-1TFJan:hover {
+    background-color: rgba(255,0,0,0.63);
+    color: #fff;
 }
 .scroller-wrap .scroller::-webkit-scrollbar-track-piece,
 .bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar, 
@@ -2263,10 +2275,16 @@ a, .theme-dark .message-group a,.chat .welcome-message h1,.theme-dark .chat .wel
     color: rgb(255, 255, 255);
 }
 .progress-2XXRYo,
-.progressBar-3u8FBM.small-1CUeBa[style*=“background-color: rgb(114, 137, 218);”] {
+.progressBar-3u8FBM.small-1CUeBa,
+.progressBar-3u8FBM.large-3EPlRk,
+.mediaBarGrabber-1FqnbN, 
+.mediaBarProgress-1xaPtl, 
+.mediaBarProgress-1xaPtl:after, 
+.mediaBarProgress-1xaPtl:before {
     background-color: #D0E5E5 !important;
 }
-.video-1FfuMD {
+.video-1FfuMD,
+.theme-dark .private-channel-call {
     background-color: rgba(0,0,0,0.4);
 }
 /* New Invite Stuff */
