--- a/Luigi.theme.css
+++ b/Luigi.theme.css
@@ -95,31 +95,37 @@
     background-color: #284A12;
     border-color: rgba(0, 0, 0, 0);
 }
-/* #user-profile stuff */
-#user-profile-modal .scroller,#user-profile-modal .tab-bar-container,#user-profile-modal .header {
-    background: rgba(1,144,0,0.6);
+.theme-dark .callAvatar-v-u4BM.voice-2D-tt_ .callAvatarStatus-3y6S04 {
+    border-color: black;
+    background-color: #284A12;
 }
-#user-profile-modal .avatar-wrapper {
-    background: transparent;
+.callAvatarBorder-1D_KaE.voice-2D-tt_.speaking-oCqYMI,
+.callAvatarBorder-1D_KaE.video-3GgX2M.speaking-oCqYMI {
+    border-radius: 50%;
+    box-shadow: inset 0 0 0 3px #284A12;
 }
-.avatar-profile {
+.lookFilled-1Gx00P.colorRed-1TFJan {
+    background-color: rgba(255,0,0,0.23);
+    color: #fff;
+    border: 1px solid red;
+}
+.lookFilled-1Gx00P.colorRed-1TFJan:hover {
+    background-color: rgba(255,0,0,0.63);
+    color: #fff;
+}
+.avatar-3EQepX {
     background-color: #284A12;
     border: 5px solid #019000;
 }
-#user-profile-modal .header:after {
-    background-color: transparent;
-    background-image: linear-gradient(-180deg,rgba(255, 255, 255, 0),rgba(1,144,0,0.6));
-}
-.avatar-profile .status {
+
+.avatar-3EQepX .status {
     border: 4px solid black;
     width: 54px;
     height: 54px;
     top: 79px;
     right: -8px;
 }
-#user-profile-modal .tab-bar-container {
-    border-bottom: none;
-}
+
 
 .topSectionPlaying-1J5E4n{
     background: rgba(0, 0, 255,0.4);
@@ -130,9 +136,7 @@
 .root-SR8cQa {
     background: url(https://www.dualshockers.com/wp-content/uploads/2013/10/General-Luigi-Masthead-e1364200242526-ds1-670x363-constrain.jpg) 30% 30%/cover !important;
 }
-#user-profile-modal .guilds .section+.section {
-    border-top: none;
-}
+
 .scroller-wrap .scroller::-webkit-scrollbar-thumb {
     background-color: #284A12;
     border: 3px solid black !important;
@@ -146,17 +150,13 @@
 .theme-dark .activityProfile-2pymp0 .details-vSFjFG, .theme-dark .activityProfile-2pymp0 .name-8onsv0, .theme-dark .activityUserPopout-1nmgaw .details-vSFjFG, .theme-dark .activityUserPopout-1nmgaw .name-8onsv0, .theme-light .activityProfile-2pymp0 .details-vSFjFG, .theme-light .activityProfile-2pymp0 .name-8onsv0, .theme-light .activityUserPopout-1nmgaw .details-vSFjFG, .theme-light .activityUserPopout-1nmgaw .name-8onsv0 {
    color: white;
 }
-#user-profile-modal .tab-bar .tab-bar-item {
-    color: white;
-}
+
 .tab-bar.tabBar-2z50ux .tabBarItem-1Lg555.selected {
     border-bottom-color: #5BA949 !important;
     color: white;
     font-weight: bold;
 }
-#user-profile-modal .guilds .guild .guild-name {
-    color: white;
-}
+
 .listAvatar-1NlAhb {
     border: 3px solid #284A12;
     background-color: #019000;
@@ -173,12 +173,7 @@
     color: white;
     font-size: 14px;
 }
-#user-profile-modal .guilds .guild .status {
-    border: 3px solid black;
-}
-#user-profile-modal .guilds .guild:hover .status {
-    border-color: rgba(0, 0, 0,0.8);
-}
+
 .tab-bar.TOP .tab-bar-item:hover {
     border-bottom: 2px solid green;
 }
@@ -187,58 +182,7 @@
     box-shadow: none;
 }
 
-#user-profile-modal .header .header-info .header-info-inner .discord-tag .username {
-    position: absolute;
-    top: 9px;
-    left: 81px;
-    font-size: 122%;
-    margin-bottom: 0px !important;
-}
-#user-profile-modal .header .header-info .header-info-inner .discord-tag .discriminator {
-    position: absolute;
-    top: 112px;
-    left: 28pc;
-    font-size: 122%;
-    color: black;
-    margin-bottom: 0px !important;
-}
-#user-profile-modal .actions .btn.send-message {
-    background: #019000;
-    color: white;
-    border: 3px solid #284A12;
-    height: 34px;
-}
-#user-profile-modal .actions .btn.send-message:hover {
-    background: #019000;
-    color: white;
-    border: 3px outset #284A12;
-    height: 34px;
-}
-#user-profile-modal .actions .btn.send-message:active {
-    background: #019000;
-    color: white;
-    border: 3px inset #284A12;
-    height: 34px;
-}
-#user-profile-modal .actions .btn.add-friend {
-    background: #019000;
-    color: white;
-    border: 3px solid #284A12;
-    height: 34px;
-    position: absolute;
-    bottom: -9px;
-    left: 11.3pc;
-}
-#user-profile-modal .actions .btn.add-friend:hover {
-    background: #019000;
-    color: white;
-    border: 3px outset #284A12;
-}
-#user-profile-modal .actions .btn.add-friend:active {
-    background: #019000;
-    color: white;
-    border: 3px inset #284A12;
-}
+
 .userInfoSectionHeader-CBvMDh {
     color: white;
     font-size: 17px;
@@ -255,14 +199,7 @@
     padding-right: 5px;
     padding-bottom: 3px;
 }
-#user-profile-modal .header .header-info .header-info-inner .activity {
-    color: black;
-    font-size: 23px;
-    margin-bottom: 0px !important;
-    position: absolute; 
-    top: 33px;
-    left: 11pc;
-}
+
 /* LAST BUT NOT LEAST PART, THE USER POPOUT AND USER PROFILE MODAL */
 .theme-dark .headerNormal-T_seeN,.theme-dark .body-3iLsc4, .theme-dark .footer-1fjuF6 {
     background: rgba(40,74,18,0.6) !important;
@@ -284,7 +221,6 @@
     background: url(http://pre15.deviantart.net/962e/th/pre/f/2014/009/2/5/minimal_luigi__2560x1440__by_zachthesloth-d71js90.png) -80px -80px/cover !important;
     background-position: 513px !important;
 }
-.member-roles .member-role>.name{color:#FFF;}
 .body-3iLsc4 {
     border-bottom: none;
 }
@@ -297,9 +233,7 @@
 .headerTagNormal-KyD3_J {
     color: white;
 }
-.member-roles .member-role {
-    color: #019000;
-}
+
 .role-2irmRk {
   padding: 4px 6px;
   border-radius: 3px;
@@ -2003,9 +1937,9 @@ a, .theme-dark .emptyStateNote-ZYTetQ {
    background: #F0A737;
    color: white !important;
 }
-.theme-dark .item-1Yvehc:hover {
-   background: #F0A737;
-   color: white !important;
+.theme-dark .item-1Yvehc {
+    border-radius: 0;
+    padding: 8px;
 }
 .theme-dark.contextMenu-HLZMGh {
     background: #013C00;
@@ -2164,10 +2098,16 @@ a, .theme-dark .emptyStateNote-ZYTetQ {
     color: rgb(255, 255, 255);
 }
 .progress-2XXRYo,
-.progressBar-3u8FBM.small-1CUeBa[style*=“background-color: rgb(114, 137, 218);”] {
+.progressBar-3u8FBM.small-1CUeBa,
+.progressBar-3u8FBM.large-3EPlRk,
+.mediaBarGrabber-1FqnbN, 
+.mediaBarProgress-1xaPtl, 
+.mediaBarProgress-1xaPtl:after, 
+.mediaBarProgress-1xaPtl:before {
     background-color: #33A634 !important;
 }
-.video-1FfuMD {
+.video-1FfuMD,
+.theme-dark .private-channel-call {
     background-color: rgba(0,0,0,0.4);
 }
 .private-channel-recipients-invite .body .scroller::-webkit-scrollbar-track {
